flatly bootstrap - added example of the product list block

--- a/dreamerteam/webshop/templates/base.html
+++ b/dreamerteam/webshop/templates/base.html
@@ -10,7 +10,7 @@
             src="{% static 'webshop/jquery-1.11.1.min.js' %}"></script>
 
         <link rel="stylesheet" type="text/css"
-            href="{% static 'webshop/bootstrap.min.css' %}">
+            href="{% static 'webshop/bootstrap-flatly.min.css' %}">
 
 
         <script type="text/javascript"
