added navigation, applied style to game list

--- a/dreamerteam/webshop/templates/base.html
+++ b/dreamerteam/webshop/templates/base.html
@@ -19,6 +19,11 @@
     {% endblock %}
 </head>
 <body>
+
+    {% block navigation %}
+        block navigation
+    {% endblock %}
+
     {% block content %}
     You must use the template tag <code>block</code> with a block name
     <code>content</code> in your own templates to put content to this area.
