--- a/dreamerteam/webshop/templates/registration/register.html
+++ b/dreamerteam/webshop/templates/registration/register.html
@@ -1,12 +1,13 @@
 {% extends "base.html" %}
 
-{% block title %}Create an account{% endblock %}
-
 {% block content %}
   <h1>Create an account</h1>
+  <form action="/accounts/register/" method="post">
+  {% csrf_token %}
+  {{ form }}
 
-  <form action="" method="post">
-      {{ form.as_p }}
-      <input type="submit" value="Create the account">
+  <input type="submit" value="Register">
+
   </form>
+
 {% endblock %}
