navigation to base html - gamelist is now a component rather than page

--- a/dreamerteam/webshop/templates/base.html
+++ b/dreamerteam/webshop/templates/base.html
@@ -20,9 +20,9 @@
 </head>
 <body>
 
-    {% block navigation %}
-        block navigation
-    {% endblock %}
+    
+    {% include "webshop/navigation.html" %}
+    
 
     {% block content %}
     You must use the template tag <code>block</code> with a block name
