navbar template continued -- css to custom file -- deleted redudant files

--- a/dreamerteam/webshop/templates/base.html
+++ b/dreamerteam/webshop/templates/base.html
@@ -8,6 +8,8 @@
 
         <script type="text/javascript"
             src="{% static 'webshop/jquery-1.11.1.min.js' %}"></script>
+        <link rel="stylesheet" type="text/css"
+            href="{% static 'webshop/webshop-custom-css.css' %}">
 
         <link rel="stylesheet" type="text/css"
             href="{% static 'webshop/bootstrap-flatly.min.css' %}">
