--- a/dreamerteam/webshop/templates/webshop/navigation.html
+++ b/dreamerteam/webshop/templates/webshop/navigation.html
@@ -1,1 +1,59 @@
-<a href="{% url 'games' %}">Browse games</a>
+<nav class="navbar navbar-default no-radius">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/">DreamGames</a>
+    </div>
+
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+      	{% url 'games' as url %}
+        <li {% if request.path == url %} class="active"{% endif %}><a href="{{ url }}">Browse Games</a></li>
+        <li><a href="#">Link</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+		<li class="dropdown">
+			<a class="dropdown-toggle" href="#" data-toggle="dropdown">Login <strong class="caret"></strong></a>
+			<div class="dropdown-menu"  style="padding: 15px; padding-bottom: 5px;">
+				<form>
+				<div class="form-group">
+				    <label for="inputEmail">Email</label>
+				     <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+				  </div>
+				  <div class="form-group">
+				    <label for="inputPassword">Password</label>
+				    <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+				  </div>
+				  <div class="form-group">
+				    
+				      <div class="checkbox">
+				        <label>
+				          <input type="checkbox"> Remember me
+				        </label>
+				      </div>
+				  </div>
+				  <div class="form-group">
+				      <button type="submit" class="btn btn-block btn-default">Login</button>
+				  </div>
+				</form>
+			</div>
+		</li>
+      </ul>
+   
+      <!--<form class="navbar-form navbar-left" role="search">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>-->
+      <!--<ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Link</a></li>
+      </ul>-->
+    </div>
+  </div>
+</nav>
