--- a/dreamerteam/webshop/templates/webshop/gamelist.html
+++ b/dreamerteam/webshop/templates/webshop/gamelist.html
@@ -1,11 +1,6 @@
-<style type="text/css">
-    
-</style>
-
-
 {% for game in all_games %}
     <div class="list-product-wrapper">
-        <img class="product-icon" src="http://humblebundle-a.akamaihd.net/misc/files/hashed/4446a7cfe27c1b8aae7c3b17342c4b5e6d38739d.jpg" alt="">
+        <img class="product-icon" src="https://humblebundle-a.akamaihd.net/misc/files/hashed/5afbc9b47ae92a35245258a3f2a05a05877c2dae.jpg" alt="">
         <div class="product-title-description">
             <h3>{{game.name}}</h3>
             <div>{{game.description}}</div>
