--- a/dreamerteam/webshop/templates/webshop/navigation.html
+++ b/dreamerteam/webshop/templates/webshop/navigation.html
@@ -19,7 +19,7 @@
       <ul class="nav navbar-nav navbar-right">
 		<li class="dropdown">
 			<a class="dropdown-toggle" href="#" data-toggle="dropdown">Login <strong class="caret"></strong></a>
-			<div class="dropdown-menu"  style="padding: 15px; padding-bottom: 5px;">
+			<div class="dropdown-menu login-dropdown">
 				<form>
 				<div class="form-group">
 				    <label for="inputEmail">Email</label>
