--- a/dreamerteam/webshop/templates/base.html
+++ b/dreamerteam/webshop/templates/base.html
@@ -2,6 +2,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
+    
+    <!-- To ensure proper rendering and touch zooming -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>{% block title %}Base title{% endblock %}</title>
 
     {% block header %}
