--- a/dreamerteam/webshop/templates/webshop/games.html
+++ b/dreamerteam/webshop/templates/webshop/games.html
@@ -7,12 +7,17 @@
 {% block content %}
 
     <div id="tableContainer" class="container-fluid">
+    	<div class="row">
+	        <div class="col-xs-12">
+	        	{% include "webshop/search-component.html" %}
+	        </div>
+	    </div>
+	    <br />
 	    <div class="row">
 	        <div class="col-xs-12">
 	        	{% include "webshop/gamelist.html" %}
 	        </div>
 	    </div>
-
     </div>
 
 
