--- a/dreamerteam/webshop/templates/webshop/games.html
+++ b/dreamerteam/webshop/templates/webshop/games.html
@@ -2,10 +2,7 @@
 
 {% block title %}List of games{% endblock %}
 
-
-
 {% block content %}
-
     <div id="tableContainer" class="container-fluid">
     	<div class="row">
 	        <div class="col-xs-12">
@@ -14,11 +11,9 @@
 	    </div>
 	    <br />
 	    <div class="row">
-	        <div class="col-xs-12">
+	        <div class="col-xs-12" id="game-list">
 	        	{% include "webshop/gamelist.html" %}
 	        </div>
 	    </div>
     </div>
-
-
 {% endblock %}
