--- a/dreamerteam/webshop/templates/webshop/search-component.html
+++ b/dreamerteam/webshop/templates/webshop/search-component.html
@@ -18,9 +18,8 @@
     </div>
 </div>
 <script type="text/javascript">
+$(document).ready(function(){
 	$('#search-button').click(function() {
-      
-		console.log('search ',  $("#search-input"));
 		$.ajax({
 	        type: "GET",
 	        url: "/games", 
@@ -30,4 +29,5 @@
          	}
 		});
 	});
+});
 </script>
