initial payment implementation, callbacks don't work (see NOTE in views.py)

--- a/dreamerteam/webshop/templates/webshop/gamelist.html
+++ b/dreamerteam/webshop/templates/webshop/gamelist.html
@@ -7,9 +7,7 @@
         </div>
         <div class="list-product-buy-wrapper">
             <div class="text-warning price">{{game.price}}</div>
-            <button class="btn btn-success">Buy</button>
+            <button onclick="location.href='{% url 'buy' game.id %}';" class="btn btn-success">Buy</button>
         </div>
     </div>
 {% endfor %}
-
-
