--- a/dreamerteam/webshop/templates/registration/confirm.html
+++ b/dreamerteam/webshop/templates/registration/confirm.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-  <h1>You have registered! Please check your email to confirm your email address!</h1>
+  <h1>Your account has been confirmed</h1>
   <p>click <a href="/accounts/login/">here </a> to login </p>
 
 {% endblock %}
