commented search component js

--- a/dreamerteam/webshop/templates/webshop/search-component.html
+++ b/dreamerteam/webshop/templates/webshop/search-component.html
@@ -23,11 +23,13 @@ $(document).ready(function(){
 
 	$('#search-button').click(function() {
 		searchService.searchGames($("#search-input").val(), $("#order-by").val(), function(data){
-			$('#game-list').html(data);
+			$('#game-list').html(data); // put data retrieved from search service to html
 		});
 	});
 
 	function SearchService(){
+		/* search object (factory pattern) for later easy use of searching games etc */
+
 		var searchGames = function(input, orderBy, callback){
 			orderBy = orderBy ? orderBy : 'name'; /* order by name by default */
 			$.ajax({
