--- a/dreamerteam/webshop/templates/webshop/gamelist.html
+++ b/dreamerteam/webshop/templates/webshop/gamelist.html
@@ -7,7 +7,12 @@
         </div>
         <div class="list-product-buy-wrapper">
             <div class="text-warning price">{{game.price}}</div>
-            <button onclick="location.href='{% url 'buy' game.id %}';" class="btn btn-success">Buy</button>
+            {% if user.is_authenticated %}
+                <button onclick="location.href='{% url 'buy' game.id %}';"
+                class="btn btn-success">Buy</button>
+            {% else %}
+                <button class="btn btn-success">View</button>
+            {% endif %}
         </div>
     </div>
 {% endfor %}
