games view enchanced

--- a/dreamerteam/webshop/templates/webshop/search-component.html
+++ b/dreamerteam/webshop/templates/webshop/search-component.html
@@ -23,7 +23,12 @@ $(document).ready(function(){
 
 	$('#search-button').click(function() {
 		searchService.searchGames($("#search-input").val(), $("#order-by").val(), function(data){
-			$('#game-list').html(data); // put data retrieved from search service to html
+			console.log(data, 'data');
+			if(data){
+				$('#game-list').html(data); // put data retrieved from search service to html
+			} else {
+				$('#game-list').html('No games found');
+			}
 		});
 	});
 
