--- a/dreamerteam/webshop/templates/webshop/gamelist.html
+++ b/dreamerteam/webshop/templates/webshop/gamelist.html
@@ -1,6 +1,8 @@
-{% for game in all_games %}
+{% if all_games %}
+    {% for game in all_games %}
     <div class="list-product-wrapper">
         <img class="product-icon" src="https://humblebundle-a.akamaihd.net/misc/files/hashed/5afbc9b47ae92a35245258a3f2a05a05877c2dae.jpg" alt="">
+        <!--<div class="product-icon"><span class="glyphicon glyphicon-tag"></span></div>-->
         <div class="product-title-description">
             <h3>{{game.name}}</h3>
             <div>{{game.description}}</div>
@@ -15,4 +17,8 @@
             {% endif %}
         </div>
     </div>
-{% endfor %}
+    {% endfor %}
+{% else %}
+    <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+    <strong>No games found :/</strong>
+{% endif %}
