--- a/dreamerteam/webshop/templates/webshop/gamelist.html
+++ b/dreamerteam/webshop/templates/webshop/gamelist.html
@@ -1,6 +1,6 @@
 {% if all_games %}
     {% for game in all_games %}
-    <div class="list-product-wrapper">
+    <div class="list-product-wrapper" id="{{game.pk}}">
         <img class="product-icon" src="https://humblebundle-a.akamaihd.net/misc/files/hashed/5afbc9b47ae92a35245258a3f2a05a05877c2dae.jpg" alt="">
         <!--<div class="product-icon"><span class="glyphicon glyphicon-tag"></span></div>-->
         <div class="product-title-description">
