--- a/dreamerteam/webshop/templates/webshop/game_edit.html
+++ b/dreamerteam/webshop/templates/webshop/game_edit.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}List of games{% endblock %}
+{% block title %}Edit game{% endblock %}
 
 {% block content %}
     <div id="tableContainer" class="container-fluid">
@@ -10,48 +10,32 @@
 	        	<div class="well">
 	        		<form class="form-horizontal">
 					  <fieldset>
+					  <legend><strong>Edit Game: </strong> {{game.name}}</legend>
 					    <div class="form-group">
-					      <label for="inputEmail" class="col-lg-2 control-label">Game Name</label>
+					      <label for="inputName" class="col-lg-2 control-label">Game Name</label>
 					      <div class="col-lg-10">
-					        <input class="form-control" id="inputEmail" placeholder="Email" type="text">
+					        <input class="form-control" id="inputName" placeholder="Name of the game" value="{{game.name}}" type="text">
 					      </div>
 					    </div>
 					    <div class="form-group">
-					      <label for="inputPassword" class="col-md-2 control-label">Password</label>
-					      <div class="col-md-10">
-					        <input class="form-control" id="inputPassword" placeholder="Password" type="password">
-					        <div class="checkbox">
-					          <label>
-					            <input type="checkbox"> Checkbox
-					          </label>
-					        </div>
-					      </div>
-					    </div>
-					    <div class="form-group">
-					      <label for="textArea" class="col-lg-2 control-label">Textarea</label>
+					      <label for="descriptionInput" class="col-lg-2 control-label">Game Description</label>
 					      <div class="col-lg-10">
-					        <textarea class="form-control" rows="3" id="textArea"></textarea>
-					        <span class="help-block">A longer block of help text that breaks onto a new line and may extend beyond one line.</span>
+					        <textarea class="form-control" rows="3" id="descriptionInput">{{game.description}}</textarea>
+					        <span class="help-block">Describe your game and it's core elements.</span>
 					      </div>
 					    </div>
 					    <div class="form-group">
-					      <label class="col-lg-2 control-label">Radios</label>
+					      <label for="inputPrice" class="col-lg-2 control-label">Price (€)</label>
 					      <div class="col-lg-10">
-					        <div class="radio">
-					          <label>
-					            <input name="optionsRadios" id="optionsRadios1" value="option1" checked="" type="radio">
-					            Option one is this
-					          </label>
-					        </div>
-					        <div class="radio">
-					          <label>
-					            <input name="optionsRadios" id="optionsRadios2" value="option2" type="radio">
-					            Option two can be something else
-					          </label>
-					        </div>
+					        <input class="form-control" id="inputPrice" placeholder="Full price of the game" value="{{game.price}}" type="number">
 					      </div>
 					    </div>
-					    
+					    <div class="form-group">
+					      <label for="inputPublishdate" class="col-lg-2 control-label">Publish Date</label>
+					      <div class="col-lg-10">
+					        <input class="form-control" id="inputPublishdate" placeholder="" value="{{game.published}}" type="date">
+					      </div>
+					    </div>
 					    <div class="form-group">
 					      <div class="col-lg-10 col-lg-offset-2">
 					        <button type="reset" class="btn btn-default">Cancel</button>
