--- a/dreamerteam/webshop/templates/webshop/dev.html
+++ b/dreamerteam/webshop/templates/webshop/dev.html
@@ -25,7 +25,7 @@
 					            <div>Blaa description</div>
 					        </div>
 					        <div class="list-product-buy-wrapper">
-					            <button class="btn btn-primary">Edit</button>
+					            <button class="btn btn-primary" href="">Edit</button>
 					        </div>
 					    </div>
 				    </div>
