--- a/dreamerteam/webshop/templates/webshop/game_edit.html
+++ b/dreamerteam/webshop/templates/webshop/game_edit.html
@@ -3,43 +3,49 @@
 {% block title %}Edit game{% endblock %}
 
 {% block content %}
+
     <div id="tableContainer" class="container-fluid">
     	<div class="row">
 	        <div class="col-xs-12 col-md-8">
 	        	<!-- move to template? -->
 	        	<div class="well">
-	        		<form class="form-horizontal">
+	        		<form class="form-horizontal" method="post" action="">
+	        		{% csrf_token %}
 					  <fieldset>
-					  <legend><strong>Edit Game: </strong> {{game.name}}</legend>
+					  <legend><strong>Edit Game: </strong> {{form.name.value}}</legend>
 					    <div class="form-group">
 					      <label for="inputName" class="col-lg-2 control-label">Game Name</label>
 					      <div class="col-lg-10">
-					        <input class="form-control" id="inputName" placeholder="Name of the game" value="{{game.name}}" type="text">
+					        <!--<input class="form-control" id="inputName" placeholder="Name of the game" value="{{form.name.value}}" name="name" type="text">-->
+					        {{form.name}}
 					      </div>
 					    </div>
 					    <div class="form-group">
 					      <label for="descriptionInput" class="col-lg-2 control-label">Game Description</label>
 					      <div class="col-lg-10">
-					        <textarea class="form-control" rows="3" id="descriptionInput">{{game.description}}</textarea>
+					        <!--<textarea class="form-control" rows="3" id="descriptionInput">{{form.description.value}}</textarea>-->
+					        {{form.description}}
 					        <span class="help-block">Describe your game and it's core elements.</span>
 					      </div>
 					    </div>
 					    <div class="form-group">
 					      <label for="inputPrice" class="col-lg-2 control-label">Price (€)</label>
 					      <div class="col-lg-10">
-					        <input class="form-control" id="inputPrice" placeholder="Full price of the game" value="{{game.price}}" type="number">
+					        <!--<input class="form-control" id="inputPrice" placeholder="Full price of the game" value="{{form.price.value}}" type="number"> -->
+					        {{form.price}}
 					      </div>
 					    </div>
 					    <div class="form-group">
 					      <label for="inputPublishdate" class="col-lg-2 control-label">Publish Date</label>
 					      <div class="col-lg-10">
-					        <input class="form-control" id="inputPublishdate" placeholder="" value="{{game.published}}" type="date">
+					        <!--<input class="form-control" id="inputPublishdate" placeholder="" value="{{form.published.value}}" type="date">-->
+					        {{form.published}} 
 					      </div>
 					    </div>
 					    <div class="form-group">
 					      <div class="col-lg-10 col-lg-offset-2">
 					        <button type="reset" class="btn btn-default">Cancel</button>
-					        <button type="submit" class="btn btn-primary">Submit</button>
+					        <input type="submit" value="Submit" class="btn btn-primary" />
 					      </div>
 					    </div>
 					  </fieldset>
@@ -48,4 +54,8 @@
 	        </div>
 	    </div>
     </div>
+    
 {% endblock %}
+
+
+    
