--- a/dreamerteam/webshop/templates/webshop/dev.html
+++ b/dreamerteam/webshop/templates/webshop/dev.html
@@ -14,7 +14,9 @@
 	        	<!-- move to template? -->
         		<div class="panel panel-default">
 				    <div class="panel-heading">
-				      <h3 class="panel-title">Your games <a href="#" class="btn btn-success btn-xs pull-right" style="color:#fff;">Add new game</a></h3>  
+				      <h3 class="panel-title">
+				      	Your games <a href="#" class="btn btn-success btn-xs pull-right" style="color:#fff;">Add new game</a>
+				      </h3>  
 				    </div>
 				    <div class="panel-body">
 				    	<div class="list-product-wrapper">
