--- a/dreamerteam/webshop/templates/webshop/game_edit.html
+++ b/dreamerteam/webshop/templates/webshop/game_edit.html
@@ -16,16 +16,23 @@
 					    <div class="form-group">
 					      <label for="inputName" class="col-lg-2 control-label">Game Name</label>
 					      <div class="col-lg-10">
-					        <!--<input class="form-control" id="inputName" placeholder="Name of the game" value="{{form.name.value}}" name="name" type="text">-->
 					        {{form.name}}
+					        <p class="text-danger">{{form.name.errors|striptags}}</p>
 					      </div>
 					    </div>
 					    <div class="form-group">
 					      <label for="descriptionInput" class="col-lg-2 control-label">Game Description</label>
 					      <div class="col-lg-10">
-					        <!--<textarea class="form-control" rows="3" id="descriptionInput">{{form.description.value}}</textarea>-->
 					        {{form.description}}
+					        <p class="text-danger">{{form.description.errors|striptags}}</p>
 					        <span class="help-block">Describe your game and it's core elements.</span>
+					      </div>
+					    </div>
+					    <div class="form-group">
+					      <label for="inputUrl" class="col-lg-2 control-label">Game Url</label>
+					      <div class="col-lg-10">
+					        {{form.url}}
+					        <p class="text-danger">{{form.url.errors|striptags}}</p>
 					      </div>
 					    </div>
 					    <div class="form-group">
@@ -33,13 +40,15 @@
 					      <div class="col-lg-10">
 					        <!--<input class="form-control" id="inputPrice" placeholder="Full price of the game" value="{{form.price.value}}" type="number"> -->
 					        {{form.price}}
+					        <p class="text-danger">{{form.price.errors|striptags}}</p>
 					      </div>
 					    </div>
 					    <div class="form-group">
 					      <label for="inputPublishdate" class="col-lg-2 control-label">Publish Date</label>
 					      <div class="col-lg-10">
 					        <!--<input class="form-control" id="inputPublishdate" placeholder="" value="{{form.published.value}}" type="date">-->
-					        {{form.published}} 
+					        {{form.published}}
+					        <p class="text-danger">{{form.published.errors|striptags}}</p> 
 					      </div>
 					    </div>
 					    <div class="form-group">
