--- a/dreamerteam/webshop/templates/webshop/dev.html
+++ b/dreamerteam/webshop/templates/webshop/dev.html
@@ -15,21 +15,31 @@
         		<div class="panel panel-default">
 				    <div class="panel-heading">
 				      <h3 class="panel-title">
-				      	Your games <a href="#" class="btn btn-success btn-xs pull-right" style="color:#fff;">Add new game</a>
+				      	{% url 'add_game' as url %}
+				      	Your games <a href="{{url}}" class="btn btn-success btn-xs pull-right" style="color:#fff;">Add new game</a>
 				      </h3>  
 				    </div>
 				    <div class="panel-body">
-				    	<div class="list-product-wrapper">
-					        <img class="product-icon" src="https://humblebundle-a.akamaihd.net/misc/files/hashed/5afbc9b47ae92a35245258a3f2a05a05877c2dae.jpg" alt="">
-					        <!--<div class="product-icon"><span class="glyphicon glyphicon-tag"></span></div>-->
-					        <div class="product-title-description">
-					            <h3>Your game</h3>
-					            <div>Blaa description</div>
-					        </div>
-					        <div class="list-product-buy-wrapper">
-					            <button class="btn btn-primary" href="">Edit</button>
-					        </div>
-					    </div>
+				    <!-- move to template? -->
+				    	{% if games %}
+    						{% for game in games %}
+						    	<div class="list-product-wrapper">
+							        <img class="product-icon" src="https://humblebundle-a.akamaihd.net/misc/files/hashed/5afbc9b47ae92a35245258a3f2a05a05877c2dae.jpg" alt="">
+							        <!--<div class="product-icon"><span class="glyphicon glyphicon-tag"></span></div>-->
+							        <div class="product-title-description">
+							            <h3>{{game.name}}</h3>
+							            <div>{{game.description}}</div>
+							        </div>
+							        <div class="list-product-buy-wrapper">	
+							        	{% url 'dev' as url %} <!-- dont know why this has to be set before using -->
+							            <a class="btn btn-primary" href="{{url}}game/{{game.id}}">Edit</a>
+							        </div>
+							    </div>
+							{% endfor %}
+						
+						{% else %}
+							No games found.
+						{% endif %}
 				    </div>
 			    </div>
 	        </div>
