--- a/dreamerteam/webshop/templates/webshop/game.html
+++ b/dreamerteam/webshop/templates/webshop/game.html
@@ -5,14 +5,16 @@
   <script type="text/javascript">
     gameID = "{{game.pk}}";
     username = "{{user.username}}";
-
   </script>
   <script src="{% static 'webshop/game.js' %}"></script>
   {% csrf_token %}
   name: {{ game.name }}
+  user_highscore: {{user_highscore}}
+  global_highscore: {{global_highscore}}
   </br>
   </br>
-
+  <div class="errorDiv invisible">error</div>
   <iframe id = "targetFrame" class="game-iframe" src="{{game.url}}" allowfullscreen></iframe>
+
 
 {% endblock %}
