--- a/dreamerteam/webshop/templates/webshop/game_add_edit_form.html
+++ b/dreamerteam/webshop/templates/webshop/game_add_edit_form.html
@@ -55,7 +55,7 @@
 	    {% endif %}
 	    <div class="form-group">
 	      <div class="col-lg-10 col-lg-offset-2">
-	        <button type="reset" class="btn btn-default">Cancel</button>
+	        <a href="{{ request.META.HTTP_REFERER }}"  class="btn btn-default">Cancel </a>
 	        <input type="submit" value="Submit" class="btn btn-primary" />
 	      </div>
 	    </div>
