--- a/dreamerteam/webshop/templates/webshop/games.html
+++ b/dreamerteam/webshop/templates/webshop/games.html
@@ -3,7 +3,7 @@
 {% block title %}List of games{% endblock %}
 
 {% block content %}
-    <div id="tableContainer" class="container-fluid">
+    <div class="container-fluid">
     	<div class="row">
 	        <div class="col-xs-12">
 	        	{% include "webshop/search-component.html" %}
