--- a/dreamerteam/webshop/templates/webshop/search-component.html
+++ b/dreamerteam/webshop/templates/webshop/search-component.html
@@ -1,3 +1,5 @@
+{% load staticfiles %}
+
 <div class="row">
 	<div class="col-xs-12 col-md-4">
 		<div class="input-group">
@@ -17,38 +19,4 @@
     	</div>
     </div>
 </div>
-<script type="text/javascript">
-$(document).ready(function(){
-	var searchService = SearchService(); 
-
-	$('#search-button').click(function() {
-		searchService.searchGames($("#search-input").val(), $("#order-by").val(), function(data){
-			console.log(data, 'data');
-			if(data){
-				$('#game-list').html(data); // put data retrieved from search service to html
-			} else {
-				$('#game-list').html('No games found');
-			}
-		});
-	});
-
-	function SearchService(){
-		/* search object (factory pattern) for later easy use of searching games etc */
-
-		var searchGames = function(input, orderBy, callback){
-			orderBy = orderBy ? orderBy : 'name'; /* order by name by default */
-			$.ajax({
-		        type: "GET",
-		        url: "/games", 
-		        data: {"search_term": input, order: orderBy},
-		        success : function(data) {
-		            callback(data);
-	         	}
-			});
-		}
-		return {
-			searchGames: searchGames
-		}
-	}
-});
-</script>
+<script type="text/javascript" src="{% static 'webshop/search.js' %}"></script>
