--- a/dreamerteam/webshop/templates/webshop/game_add_edit_form.html
+++ b/dreamerteam/webshop/templates/webshop/game_add_edit_form.html
@@ -49,7 +49,7 @@
         {% if request.path != url %} 
     	<div class="form-group">
       		<div class="col-lg-10 col-lg-offset-2">
-      			<input type="submit" value="Delete" name="submit" class="btn btn-danger pull-right">
+      			<input type="submit" value="Delete" name="submit" class="btn btn-danger pull-right" onclick="return confirm('Are you sure that you want to delete this game?')">
       		</div>
       	</div>
 	    {% endif %}
@@ -62,28 +62,3 @@
 	  </fieldset>
 	</form>
 </div>
-<script type="text/javascript">
-$(document).ready(function(){
-
-	$('.delete-button').click(function(event) {
-	 	var confMessage = window.confirm('Are you sure that you want to delete this game?');
-	 	if(confMessage){
-	 		deleteGame($(this));
-	 	}
-	 	event.preventDefault(); // prevent form send
-	});
-
-	var deleteGame = function (gameId) {
-		console.log(gameId);
-		var url = '/dev/game/delete/' + gameId; 
-		$.ajax({
-	        type: "POST",
-	        url: url, 
-	        success : function(result) {
-	            console.log(result);
-	     	}
-		});
-	};
-});
-
-</script>
