--- a/dreamerteam/webshop/templates/webshop/navigation.html
+++ b/dreamerteam/webshop/templates/webshop/navigation.html
@@ -1,78 +1,63 @@
 <nav class="navbar navbar-default no-radius">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="/">DreamGames</a>
-    </div>
-
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-      	{% url 'games' as url %}
-        <li {% if request.path == url %} class="active"{% endif %}><a href="{{ url }}">Browse Games</a></li>
-        {% url 'dev' as devUrl %}
-        <li {% if request.path == devUrl %} class="active" {% endif %}><a href="{{ devUrl }}">Developer</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-		<li class="dropdown">
-            <a class="dropdown-toggle" href="#" data-toggle="dropdown">
-                {% if user.is_authenticated %} Welcome, {{user.username}}
-                {% else %} Login
-                {% endif %}
-                <strong class="caret"></strong>
-            </a>
-            <div class="dropdown-menu login-dropdown">
-            {% if user.is_authenticated %}
-                <button onclick="location.href = '{% url 'logout' %}?next=/';"
-                class="btn btn-block btn-default">Log out</button>
-            {% else %}
-                <form action="{% url 'custom_login' %}" method="post">
-                    {% csrf_token %}
-                    <div class="form-group">
-                        <label for="inputUsername">Username</label>
-                        <input type="text" name="username"
-                            class="form-control" id="inputUsername"
-                            placeholder="Username">
-                    </div>
-                    <div class="form-group">
-                        <label for="inputPassword">Password</label>
-                        <input type="password" name="password"
-                        class="form-control" id="inputPassword"
-                        placeholder="Password">
-
-                    </div>
-                    <!-- NOTE: Are we going to implement this feature? - Teemu
-                    <div class="form-group">
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox"> Remember me
-                            </label>
-                        </div>
-                    </div> -->
-                    <div class="form-group">
-                        <button type="submit" class="btn btn-block btn-default">Login</button>
-                    </div>
-                </form>
-                <button onclick="location.href = '{% url 'register' %}';"
-                class="btn btn-block btn-default">Register</button>
-            {% endif %}
-            </div>
-		</li>
-      </ul>
-
-      <!--<form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">DreamGames</a>
         </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>-->
-      <!--<ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-      </ul>-->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                {% url 'games' as url %}
+                <li {% if request.path == url %} class="active"{% endif %}><a href="{{ url }}">Browse Games</a></li>
+                {% url 'dev' as devUrl %}
+                <li {% if request.path == devUrl %} class="active" {% endif %}><a href="{{ devUrl }}">Developer</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown">
+                    <a class="dropdown-toggle" href="#" data-toggle="dropdown">
+                    {% if user.is_authenticated %} Welcome, {{user.username}}
+                    {% else %} Login
+                    {% endif %}
+                    <strong class="caret"></strong>
+                    </a>
+                    <div class="dropdown-menu login-dropdown">
+                        {% if user.is_authenticated %}
+                        <button onclick="location.href = '{% url 'logout' %}?next=/';"
+                            class="btn btn-block btn-default">Log out</button>
+                        {% else %}
+                        <form action="{% url 'custom_login' %}" method="post">
+                            {% csrf_token %}
+                            <div class="form-group">
+                                <label for="inputUsername">Username</label>
+                                <input type="text" name="username"
+                                    class="form-control" id="inputUsername"
+                                    placeholder="Username">
+                            </div>
+                            <div class="form-group">
+                                <label for="inputPassword">Password</label>
+                                <input type="password" name="password"
+                                    class="form-control" id="inputPassword"
+                                    placeholder="Password">
+                            </div>
+                            <div class="form-group">
+                                <button type="submit" class="btn btn-block btn-default">Login</button>
+                            </div>
+                        </form>
+                        {% if not user.is_authenticated %}
+                            <a href="{% url 'social:begin' 'facebook' %}?next={% url 'index' %}" class="btn btn-block btn-primary">
+                                Login with Facebook
+                            </a>
+                        {% endif %}
+                        <br />
+                        <p>Not yet registered? <a href="{% url 'register' %}"> Register here</a></p>
+                        {% endif %}
+                    </div>
+                </li>
+            </ul>
+        </div>
     </div>
-  </div>
 </nav>
