--- a/dreamerteam/webshop/templates/base.html
+++ b/dreamerteam/webshop/templates/base.html
@@ -3,11 +3,11 @@
 <html>
 <head>
     <meta charset="utf-8">
-    
+
     <!-- To ensure proper rendering and touch zooming -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>{% block title %}Base title{% endblock %}</title>
+    <title>{% block title %}DreamGames{% endblock %}</title>
 
     {% block header %}
 
@@ -27,9 +27,9 @@
 </head>
 <body>
 
-    
+
     {% include "webshop/navigation.html" %}
-    
+
 
     {% block content %}
     You must use the template tag <code>block</code> with a block name
