--- a/dreamerteam/webshop/templates/webshop/buy_finished.html
+++ b/dreamerteam/webshop/templates/webshop/buy_finished.html
@@ -2,14 +2,20 @@
 
 {% block content %}
 
-    {% if state == 'success' %}
-        <h1>Buy successful!</h1>
-    {% elif state == 'cancel' %}
-        <h1>Buy cancelled</h1>
-    {% elif state == 'error' %}
-        <h1>Buy error</h1>
-    {% else %}
-        <h1>Something bad happened :(</h1>
-    {% endif %}
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xs-12">
+                {% if state == 'success' %}
+                    <h4>Buy successful!</h4>
+                {% elif state == 'cancel' %}
+                    <h4>Buy cancelled</h4>
+                {% elif state == 'error' %}
+                    <h4>Buy error</h4>
+                {% else %}
+                    <h4>Something bad happened :(</h4>
+                {% endif %}
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
