--- a/dreamerteam/webshop/templates/webshop/buygame.html
+++ b/dreamerteam/webshop/templates/webshop/buygame.html
@@ -1,6 +1,8 @@
 {% load staticfiles %}
+
 <script type="text/javascript"
-    src="{% static 'webshop/jquery-1.11.1.min.js' %}"></script>
+    src="{% static 'webshop/jquery-1.11.1.min.js' %}">
+</script>
 
 <script type="text/javascript">
 $(document).ready(function()
