--- a/dreamerteam/webshop/templates/registration/login.html
+++ b/dreamerteam/webshop/templates/registration/login.html
@@ -2,17 +2,27 @@
 
 {% block content %}
 
-  {% if form.errors %}
-    <p class="error">Sorry, that's not a valid username or password</p>
+  {% if form.non_field_errors %}
+      {% for error in form.non_field_errors %}
+          <p class="text-danger">{{ error }}</p>
+      {% endfor %}
   {% endif %}
 
-  <form action="" method="post">
+  <form class="form-horizontal" action="{% url 'custom_login2' %}" method="post">
     {% csrf_token %}
-    <label for="username">User name:</label>
-    <input type="text" name="username" value="" id="username">
-    <label for="password">Password:</label>
-    <input type="password" name="password" value="" id="password">
-
+    <div class="form-group">
+      <label for="inputName" class="col-lg-2 control-label">Username</label>
+      <div class="col-lg-10">
+      {{form.username}}
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="inputPass" class="col-lg-2 control-label">Password</label>
+      <div class="col-lg-10">
+        {{form.password}}
+      </div>
+    </div>
+    
     <input type="submit" value="login" />
     <input type="hidden" name="next" value="{{ next|escape }}" />
   </form>
