--- a/dreamerteam/webshop/templates/webshop/profile.html
+++ b/dreamerteam/webshop/templates/webshop/profile.html
@@ -1,11 +1,12 @@
 {% extends "base.html" %}
+{% block title %}Profile{% endblock %}
 
 {% block content %}
   <h1>Edit your profile</h1>
   <form action="/accounts/profile/" method="post">
   {% csrf_token %}
   {{ form }}
-  <a href="../../accounts/password_change">change password</a>
+  <!--<a href="../../accounts/password_change">change password</a> -->
   <input type="submit" value="update">
 
   </form>
