--- a/dreamerteam/webshop/templates/registration/login.html
+++ b/dreamerteam/webshop/templates/registration/login.html
@@ -1,34 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-
-  {% if form.non_field_errors %}
-      {% for error in form.non_field_errors %}
-          <p class="text-danger">{{ error }}</p>
-      {% endfor %}
-  {% endif %}
-
-  <form class="form-horizontal" action="{% url 'custom_login2' %}" method="post">
-    {% csrf_token %}
-    <div class="form-group">
-      <label for="inputName" class="col-lg-2 control-label">Username</label>
-      <div class="col-lg-10">
-      {{form.username}}
+<div class="container-fluid">
+  <div class="row">
+      <div class="col-xs-12 col-md-8">
+        {% include "registration/login_form.html" %}
       </div>
-    </div>
-    <div class="form-group">
-      <label for="inputPass" class="col-lg-2 control-label">Password</label>
-      <div class="col-lg-10">
-        {{form.password}}
-      </div>
-    </div>
-    
-    <input type="submit" value="login" />
-    <input type="hidden" name="next" value="{{ next|escape }}" />
-  </form>
-{% if not user.is_authenticated %}
-    <a href="{% url 'social:begin' 'facebook' %}?next={% url 'index' %}" class="btn btn-primary">
-        Login with  Facebook
-    </a>
-{% endif %}
+  </div>
+</div>
 {% endblock %}
