fix for login form

--- a/dreamerteam/webshop/templates/registration/login_form.html
+++ b/dreamerteam/webshop/templates/registration/login_form.html
@@ -6,7 +6,7 @@
 </ul>
 {% endif %}
 
-<form class="form-horizontal" action="{% url 'custom_login2' %}" method="post">
+<form class="form-horizontal" action="{% url 'custom_login' %}" method="post">
   {% csrf_token %}
   <div class="form-group">
     <label for="inputName" class="col-lg-2 control-label">Username</label>
