--- a/dreamerteam/webshop/templates/registration/login.html
+++ b/dreamerteam/webshop/templates/registration/login.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container-fluid">
   <div class="row">
-      <div class="col-xs-12 col-md-8">
+      <div class="col-xs-12 ">
         {% include "registration/login_form.html" %}
       </div>
   </div>
