--- a/dreamerteam/webshop/templates/registration/login_form.html
+++ b/dreamerteam/webshop/templates/registration/login_form.html
@@ -1,35 +1,48 @@
-{% if messages %}
-<ul class="messages">
-    {% for message in messages %}
-    <li class="text-danger">{{ message }}</li>
-    {% endfor %}
-</ul>
-{% endif %}
 
-<form class="form-horizontal" action="{% url 'custom_login' %}" method="post">
-  {% csrf_token %}
-  <div class="form-group">
-    <label for="inputName" class="col-lg-2 control-label">Username</label>
-    <div class="col-lg-10">
-      <input name="username" class="form-control" value=""></input>
+<div class="well">
+    <div class="row">
+      <div class="col-xs-12 col-md-5" >  
+        <h3>Login using your account </h3>
+        <form class="form-horizontal" action="{% url 'custom_login' %}" method="post">
+        {% if messages %}
+        <ul class="messages">
+          {% for message in messages %}
+          <li class="text-danger">{{ message }}</li>
+          {% endfor %}
+        </ul>
+        {% endif %}
+        {% csrf_token %}
+        <div class="form-group">
+          <label for="inputName" class="col-lg-2 control-label">Username</label>
+          <div class="col-lg-10">
+            <input name="username" class="form-control" value=""></input>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="inputPass" class="col-lg-2 control-label">Password</label>
+          <div class="col-lg-10">
+             <input name="password" class="form-control" value="" type="password"></input>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-lg-12">
+          <input type="submit" value="login" class="btn btn-primary pull-right" />
+          </div>
+        </div>
+        <input type="hidden" name="next" value="{{ next|escape }}" />
+      </form>
+      </div>
+      <div class="col-xs-12 col-md-5 col-md-offset-1"> 
+        <h3>Login using social account</h3>
+        <p>Sign in with facebook account</p>
+        {% if not user.is_authenticated %}
+        <a href="{% url 'social:begin' 'facebook' %}?next={% url 'index' %}" class="btn btn-primary">
+            Login with Facebook
+        </a>
+        {% endif %}
+      </div>
+      
     </div>
-  </div>
-  <div class="form-group">
-    <label for="inputPass" class="col-lg-2 control-label">Password</label>
-    <div class="col-lg-10">
-       <input name="password" class="form-control" value="" type="password"></input>
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="col-lg-10">
-    <input type="submit" value="login" class="btn btn-primary" />
-    </div>
-  </div>
-  <input type="hidden" name="next" value="{{ next|escape }}" />
-</form>
+</div>
 
-{% if not user.is_authenticated %}
-<a href="{% url 'social:begin' 'facebook' %}?next={% url 'index' %}" class="btn btn-primary">
-    Login with  Facebook
-</a>
-{% endif %}
+
