--- a/dreamerteam/webshop/templates/registration/login_form.html
+++ b/dreamerteam/webshop/templates/registration/login_form.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-xs-12 col-md-5" >  
         <h3>Login using your account </h3>
-        <form class="form-horizontal" action="{% url 'custom_login' %}" method="post">
+        <form class="form-horizontal" action="{% url 'login' %}" method="post">
         {% if messages %}
         <ul class="messages">
           {% for message in messages %}
