--- a/dreamerteam/webshop/templates/webshop/index.html
+++ b/dreamerteam/webshop/templates/webshop/index.html
@@ -6,12 +6,15 @@
 {% block content %}
     <div class="container-fluid">
 	    <div class="row">
-	        <div class="col-xs-12" id="game-list">
-                {% if user.is_authenticated %}
-                    <h2> Your games: </h2>
-                {% endif %}
-
-	        	{% include "webshop/gamelist.html" %}
+            <div class="col-xs-12">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title"> Your games </h3>
+                    </div>
+                    <div class="panel-body">
+                        {% include "webshop/gamelist.html" %}
+                    </div>
+                </div>
 	        </div>
 	    </div>
     </div>
