--- a/dreamerteam/webshop/templates/registration/login_form.html
+++ b/dreamerteam/webshop/templates/registration/login_form.html
@@ -40,7 +40,7 @@
       <h3>Login using social account</h3>
       <p>Sign in with facebook account</p>
       {% if not user.is_authenticated %}
-      <a href="{% url 'social:begin' 'facebook' %}?next={% url 'faceboo_complete' %}" class="btn btn-primary">
+      <a href="{% url 'social:begin' 'facebook' %}?next={% url 'facebook_complete' %}" class="btn btn-primary">
           Login with Facebook
       </a>
     </div>
