--- a/dreamerteam/webshop/templates/webshop/game.html
+++ b/dreamerteam/webshop/templates/webshop/game.html
@@ -9,18 +9,19 @@
   </script>
   <script src="{% static 'webshop/game.js' %}"></script>
   {% csrf_token %}
-
+  <div class="gameInfo">
   <b>{{ game.name }}</b>
+  <div class="user_hs_container">
   {% if user_highscore %}
-    </br>
-    user_highscore: {{user_highscore}}
+    user_highscore: <span class="user_hs">{{user_highscore}}</span>
   {% endif %}
+  </div>
+  <div class="global_hs_container">
   {% if global_highscore  %}
-    </br>
-    global_highscore: {{global_highscore}}
+    global_highscore: <span class="global_hs"> {{global_highscore}}</span>
   {% endif %}
-  </br>
-  </br>
+  </div>
+  </div>
   <div class="errorDiv invisible">error</div>
   <iframe width="100px" id = "targetFrame" class="game-iframe" src="{{game.url}}" allowfullscreen></iframe>
 {% else %}
